--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactjs-popup": "^2.0.4",
+    "sass": "^1.32.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
