--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.1",
     "reactjs-popup": "^2.0.4",
     "sass": "^1.32.2",
+    "survey-react": "^1.8.23",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
