--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "autoprefixer": "^10.2.3",
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
+    "node-sass": "4.14.1",
+    "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -17,6 +20,7 @@
     "reactjs-popup": "^2.0.4",
     "sass": "^1.32.2",
     "survey-react": "^1.8.23",
+    "tailwindcss": "^2.0.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
